# projet_turtlebot3

./: README  README.md  README_template
arena/: README  README.txt
arena/devel/: .catkin  .rosinstall  _setup_util.py
arena/devel/lib/pkgconfig/: arena.pc
arena/src/: CMakeLists.txt  package.xml
arena/src/arena_gazebo/launch/: arena.launch  arena_teleop.launch
arena/src/arena_gazebo/models/: model.sdf
arena/src/arena_gazebo/plugins/barriere/: CMakeLists.txt  README  README.txt  barriere_plugin.cc  pos.cc
arena/src/scripts/: README  barriere  barriere2  controleur  controleur.py  pieton
arena_phy/: OC_RPi.py  readme.md
arena_phy/Arduino/OC_Boutons/: Makefile  OC_Boutons.ino
arena_phy/Arduino/OC_RPi/: Makefile  OC_RPi.ino
arene/: arena_test.world
arene/models/: arena_README
arene/models/arena/: model.config  model.sdf
détection/: README.txt
détection/arene_reelle/: detection_config.json  load.py
détection/arene_virtuelle/: detection.py  detection_config.json  load.py
robot/: README  README.txt  turtlebot3_burger.urdf.xacro
robot/Camera_model/: README.md  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
robot/follow3/: CMakeLists.txt  package.xml
robot/follow3/src/: line.py
robot/smach_statemachine/: README.md
robot/suivi/src/: line.py  line_sim.py
robot/tunnel/: README.md
robot/tunnel/launch/: tunnel.launch
robot/tunnel/src/: tunnel.py
robot/tunnel/tunnel/: CMakeLists.txt  package.xml
scripts/: barriere  barriere2  controleur  controleur.py  feu  line_sim  pieton  pieton2  setup
(+57 files in other folders)
